          because ld-tigcc doesn't use them anyway and file names in ar archives
          are subject to length constraints. (The Win32 tigcc.exe does the
          same.)
        * Fixed external data variable support for compressed programs in tigcc
          (now uses the new ld-tigcc --outputbin-main-only switch).

- 2005-10-02, version 0.96 beta 6 r1 (Kevin Kofler)
        * Synced Win32 TIGCC 0.96 Beta 6 source tree.
        * Updated installation instructions for the GCC update.
        * Added support for -isystem in the command-line compiler.

- 2005-07-02, version 0.96 beta 5 r1 (Kevin Kofler)
        * Updated build system to Fedora Core 4.
        * Fixed package_bin and updatedoc scripts for FC4 tar.
        * Synced Win32 TIGCC 0.96 Beta 5 source tree.
        * Updated build scripts for the Binutils update.
        * Updated installation instructions for the GCC and Binutils updates.
        * Using type (bash builtin) instead of which (broken on OS X) in the
          installation wizards.
        * Using $CC -v rather than $CC --version to check for Apple GCC because
          the --version output doesn't always contain "Apple" for some reason.

- 2005-04-30, version 0.96 beta 4 r1 (Kevin Kofler)
        * Synced Win32 TIGCC 0.96 Beta 4 source tree.
        * Ported patcher .ascii "_ROM_CALL_nnn" fix from Win32 TIGCC.
        * Changed tigcc -g to use DWARF 2 debugging info instead of parser.
        * Deleted parser.
        * Fixed the default output name in the tigcc frontend.

- 2005-03-24, version 0.96 beta 3 r1 (Kevin Kofler)
        * Synced Win32 TIGCC 0.96 Beta 3 source tree.
        * Build system for the binaries upgraded to Fedora Core 3.
        * Updated build scripts for GCC 4.0.0 (prerelease).
        * Added -fomit-frame-pointer to default CFLAGS.
        * Fixed Apple GCC test to actually probe the chosen $CC, not "gcc".

- 2005-02-09, version 0.96 beta 2 r1 (Kevin Kofler)
        * Synced Win32 TIGCC 0.96 Beta 2 source tree.
