@@ -15,6 +15,8 @@ Changelog for TIGCC For Linux
           same.)
         * Fixed external data variable support for compressed programs in tigcc
           (now uses the new ld-tigcc --outputbin-main-only switch).
+        * Fixed multiple uses of -Wa or -WA in the tigcc frontend (fixes
+          pedrom-ld-tigcc build).
 
 - 2005-10-02, version 0.96 beta 6 r1 (Kevin Kofler)
         * Synced Win32 TIGCC 0.96 Beta 6 source tree.
